Pasta templates e arquivos estaticos(base_template e base_static), modificando o arquivo settings.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,4 +48,11 @@
     "scminput": false,
   },
   "livePreview.defaultPreviewPath": "/aula190_site/index.html",
+  "files.associations": {
+    "*.html": "django-html",
+    "*.htm": "django-html"
+},
+"emmet.includeLanguages": {
+    "django-html": "html"
+}
 }
